2016-04-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-04-12  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.
	* lib/glfw.rb: Now usable for GLFW 3.0, 3.1 and 3.2.
	* lib/glfw30.rb, lib/glfw31.rb, lib/glfw32.rb: Removed.

2016-04-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-04-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* README.md: Tested on Windows 10 and NVIDIA GeForce GTX 960.

2016-04-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Just an alias of glfw.rb.
	* glfw32.rb: GLFW binding for version 3.2 (renamed from previous glfw.rb).

2016-04-01  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.2 features.

2016-03-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* glfw.rb: Added GLFW 3.2 features.
	* glfw31.rb: Previous version of 'glfw.rb' is available as 'glfw31.rb'.

2016-02-06  vaiorabbit  <http://twitter.com/vaiorabbit>

	* README.md: Added projects using this gem.

2016-01-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2016-01-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* LICENSE.txt: Updated copyright year.

2015-12-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/glfw.rb, lib/glfw30.rb, lib/glut.rb: 'create_callback' now creates
	callback functions as an instance of Fiddle::Closure::BlockCaller. Old
	methods are still available (renamed to create_callback_function').

2015-11-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl_linux.rb (glXGetCurrentDisplay): Fixed wrong signature.

2015-11-07  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/opengl_macosx.rb, lib/opengl_linux.rb: Added.

2015-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>

	* sample/DebugOutput/debug_output.rb: Fidex '$debug_log_callback' to '$debug_log_callback.to_i' (now runnable both C edition and pure-Ruby edition).
