@@ -1,3 +1,7 @@
+2016-04-22  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* sample/Gosu/lesson01.rb: Added.
+
 2016-04-20  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
